--- a/index.html
+++ b/index.html
@@ -137,11 +137,9 @@
 					<h5>Quick Access</h5>
 					<div class="footer-nav">
 						<ul>
-							<li> <a href="">Courses</a></li>
-							<li><a href="">Home</a></li>
-							<li><a href="">Exam</a></li>
-							<li><a href="">Blog</a></li>
-							<li><a href="">Events</a></li>
+							<li> <a href="">Help</a></li>
+							<li><a href="">Contact Us</a></li>
+							
 						</ul>
 
 					</div>
